--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,9 @@ border-style: : 2px solid purple;
 @media(max-width: 568px) {
 #quote {
 font-size: 10px;
+text-align: center;
 }
+    
 @media(max-width: 568px) {
 #myCarousel {
 padding-top: 120px;
