--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ border-style: : 2px solid purple;
 #quote {
 font-size: 10px;
 text-align: center;
+padding-bottom: 10px;    
 }
     
 @media(max-width: 568px) {
