--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ border-style: : 2px solid purple;
 #quote {
 font-size: 10px;
 text-align: center;
-padding-bottom: 10px;    
+padding-bottom: 10px;
+margin: auto;    
 }
     
 @media(max-width: 568px) {
