--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ border-style: : 2px solid purple;
 font-size: 10px;
 text-align: center;
 margin: auto;
+word-wrap: normal;
 }
     
 @media(max-width: 568px) {
